@@ -20,6 +20,7 @@ recommends:
   Test::Pod:                    1.00
   Test::Pod::Coverage:          0.08
 build_requires:
+  Data::Dumper:                 0
   IO::File:                     0
   Test::More:                   0.70
 
@@ -35,6 +36,7 @@ no_index:
 resources:
   license:    http://www.perlfoundation.org/artistic_license_2_0
   bugtracker: http://rt.cpan.org/Public/Dist/Display.html?Name=WWW-Scraper-ISBN-BookDepository_Driver
+  repository: http://github.com/barbie/www-scraper-isbn-bookdepository_driver
 
 meta-spec:
    version:   1.4
