@@ -1,4 +1,8 @@
-Revision history for Perl extension WWW-Scraper-ISBN-BookDepository_Driver.
+Revision history for WWW-Scraper-ISBN-BookDepository_Driver
+===========================================================
+
+        - added Data::Dumper as a test prerequisite.
+        - added git repository links to metadata.
 
 0.06    2013-03-10
         - change file dates changed to meet W3CDTF standards.
